<resources>
    <string name="app_name">PikaCount</string>
    <string name="cost_title">Today Cost:</string>
    <string name="addNew">+</string>
    <string name="input_name">name:</string>
    <string name="add_cost">New Cost</string>
    <string name="add_data_btn">insert</string>
    <string name="input_price">price:</string>
    <string name="input_type">type:</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="name_hint">Cost name</string>
    <string name="price_hint">Please input price</string>
    <string name="analyze_today">Today</string>
    <string name="analyze_week">Week</string>
    <string name="analyze_month">Month</string>
    <string name="search_date">Search by date:</string>
    <string name="unset">Unset</string>
    <string name="search_type_hint">Search by type:</string>
    <string name="input_date">date:</string>
    <string name="to">~</string>
    <string-array name="type_list">
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
        <item>消夜</item>
        <item>零食</item>
        <item>娛樂</item>
        <item>社交</item>
        <item>交通</item>
        <item>日常用品</item>
        <item>衣物</item>
    </string-array>
    <string-array name="type_list_for_search">
        <item>不限</item>
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
        <item>消夜</item>
        <item>零食</item>
        <item>娛樂</item>
        <item>社交</item>
        <item>交通</item>
        <item>日常用品</item>
        <item>衣物</item>
    </string-array>
</resources>
