<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0A7A7">

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todayBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#CA8383"
            android:gravity="center"
            android:text="@string/analyze_today"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            app:layout_constraintEnd_toStartOf="@+id/weekBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart" />

        <TextView
            android:id="@+id/weekBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#CA8383"
            android:gravity="center"
            android:text="@string/analyze_week"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart" />

        <TextView
            android:id="@+id/monthBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#CA8383"
            android:gravity="center"
            android:text="@string/analyze_month"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weekBtn"
            app:layout_constraintTop_toBottomOf="@+id/chart" />

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/columnChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weekBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>